[gd_scene load_steps=4 format=2]

[ext_resource path="res://ui/menus/pages/menu_restart.gd" type="Script" id=1]
[ext_resource path="res://resources/themes/base_theme.tres" type="Theme" id=2]
[ext_resource path="res://ui/menus/global/my_menu_button.gd" type="Script" id=3]

[node name="MenuRestart" type="VBoxContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )
alignment = 1
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Buttons" type="VBoxContainer" parent="."]
margin_left = 660.0
margin_top = 427.0
margin_right = 1260.0
margin_bottom = 652.0
rect_min_size = Vector2( 600, 0 )
size_flags_horizontal = 4
custom_constants/separation = 25
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Buttons"]
margin_right = 600.0
margin_bottom = 45.0
text = "MENU_RESTART_QUESTION"
align = 1

[node name="ConfirmButton" type="Button" parent="Buttons"]
margin_top = 70.0
margin_right = 600.0
margin_bottom = 135.0
text = "MENU_YES"
script = ExtResource( 3 )

[node name="CancelButton" type="Button" parent="Buttons"]
margin_top = 160.0
margin_right = 600.0
margin_bottom = 225.0
text = "MENU_NO"
script = ExtResource( 3 )

[connection signal="pressed" from="Buttons/ConfirmButton" to="." method="_on_ConfirmButton_pressed"]
[connection signal="pressed" from="Buttons/CancelButton" to="." method="_on_CancelButton_pressed"]
